--- a/pages/company.html
+++ b/pages/company.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Sooyeon's Cakes Shop</title>
+    <title>Chingun's Cakes Shop</title>
     <link rel="stylesheet" href="../css/style.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -25,7 +25,7 @@
         Sooyeon's Cakes is a wonderland of sugar spice and everything nice. If you want a sweetness overload be sure to buy the Sugar Explosion Cake which will leave you buzzing from a natural sugar high.</h3>
     </main>
     <footer> 
-        © Sooyeon's Cakes 2020
+        © Chingun's Cakes 2020
        </footer>
        
 </body>
