--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Sooyeon's Cake Shop</title>
+    <title>Chingun's Cake Shop</title>
     <link rel="stylesheet" href="../css/style.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -33,7 +33,7 @@
         </form>
     </main>
     <footer id="contact-footer"> 
-        © Sooyeon's Cakes 2020
+        © Chingun's Cakes 2020
     </footer>
 
     <script></script>
