--- a/pages/products.html
+++ b/pages/products.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Sooyeon's Cake Shop</title>
+    <title>Chingun's Cake Shop</title>
     <link rel="stylesheet" href="../css/style.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -43,7 +43,7 @@
 
     </main>
     <footer> 
-        © Sooyeon's Cakes 2020
+        © Chingun's Cakes 2020
        </footer>
        
 </body>
